Minor fix, database plan update
Database plan was outdated, thus it was replaced by a newer one to better reflect what the database will actually look like.
Removing html doctype messed up banner image sizing, thus i adjusted the image size to fix the problem (for now).

--- a/css/styles.css
+++ b/css/styles.css
@@ -59,7 +59,7 @@ nav ul li a {
 
 .banner {
 	width: 100%;
-	height: 100%;
+	height: 65%;
 }
 
 /* ------ PRODUCT SECTION ------- */
